[package]
name = "payguard"
version = "0.1.0"
description = "Intelligent escrow for freelancers with AI-powered arbitration"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "payguard"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
